# course_work_osquery_vim

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  start.sh
docs/demos/: command_exec1  command_exec2  command_exec3
docs/records/: build.rec  cmd1.rec  cmd2.rec  cmd3.rec  cmd4.rec  cmd5.rec  cmd6.rec  cmd7.rec  osq.rec  osquery.rec
docs/screencasts/: build_rec  command_exec1  command_exec2  command_exec3  group_stars  issues  stars
include/: crawler.h  plugin.h  pluginfo.h  shell.h  singleton.h  tools.h  webutils.h
osquery_extension/: extension.py  pluginsExtension.py
scripts/: findPlugins  findPlugins.sh  findSets  findSets.sh  getConfigPath.sh  getPluginIssues.sh  getPluginStars.sh
source/: crawler.cpp  main.cpp  plugin.cpp  pluginfo.cpp  shell.cpp  singleton.cpp  tools.cpp  vim-info_ext.cpp  webutils.cpp
